--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description: A simple and elegant theme for Jekyll and GitHub Pages.
 
 # social
 social_link: twitter
-social_username: broccolini
+social_username: malwr-io
 github_repo: athena # the GitHub repo name for your project
-github_username: broccolini
+github_username: malwr-io
 theme_color: blue
 
 # Theme
